--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body, html { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000; color: white; font-family: sans-serif; }
 #game-container { position: relative; width: 100vw; height: 100vh; }
+button { touch-action: manipulation; /* Permite clics rápidos pero evita zoom */  cursor: pointer; }
 canvas { display: block; width: 100%; height: 100%; touch-action: none; user-select: none; -webkit-tap-highlight-color: rgba(0,0,0,0); }
 
 .overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; background: rgba(0,0,0,0.85); text-align: center; z-index: 10; }
@@ -41,7 +42,7 @@ button:hover { background: #00f2ff; color: #000; }
     margin: 0; padding: 5px 12px; background: #00f2ff; color: #000; border: none; font-size: 0.8rem; font-weight: bold;
     cursor: pointer; }
 
-    
+
 @keyframes slideIn {
     from { transform: translateX(120%); }
     to { transform: translateX(0); }
